# Gstreamer_pluggin

./: CMakeLists.txt
gstchinhdv/: CMakeLists.txt  gstchinhdv.cpp  gstchinhdv.hpp  gstchinhdv_test.cpp  test.sh
source/: main.cpp  main.hpp
